Inclusão de get e set na Classe Jogador

--- a/Campeonado_Desesperados_POO/src/campeonado_desesperados_poo/CadastroJogador.form
+++ b/Campeonado_Desesperados_POO/src/campeonado_desesperados_poo/CadastroJogador.form
@@ -165,8 +165,14 @@
           </Events>
         </Component>
         <Component class="javax.swing.JTextField" name="txtRg">
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtRgActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JTextField" name="txtNome">
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtNomeActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JTextField" name="txtEnd">
         </Component>
@@ -214,6 +220,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Salvar"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btSalvarActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="btFechar">
           <Properties>
